data_DATA = 3var_13lag_half_data.txt
sbvar_dir = $(datadir)/sbvar
sbvar__DATA = sbvar/3var_13lag_restriction.txt 
tvsbvar_dir = $(datadir)/tvsbvar
tvsbvar__DATA = tvsbvar/restriction_hyper_3var_13lag.txt tvsbvar/restriction_rp_3var_13lag_v2stoch.txt tvsbvar/restriction_tvsbvar_3var_13lag_v2stoch.txt tvsbvar/restriction_rp_3var_13lag_v2stoch_c2stoch.txt tvsbvar/restriction_tvsbvar_3var_13lag_v2stoch_c2stoch.txt
EXTRA_DIST = $(data_DATA) $(sbvar__DATA) $(tvsbvar__DATA)
